// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CellText> renders as expected 1`] = `
<div
  className="cell cell--2 cell--text"
>
  ma
  <span
    className="cell__character cell__character--jiutai cell__character--begin cell__character--end"
  />
  <span
    className="cell__tooltip"
  >
    jiutai
  </span>
  <span
    className="cell__range--high"
  />
</div>
`;

exports[`<CellText> renders as expected with no vocal range 1`] = `
<div
  className="cell cell--2 cell--text"
>
  ma
  <span
    className="cell__character cell__character--jiutai cell__character--begin cell__character--end"
  />
  <span
    className="cell__tooltip"
  >
    jiutai
  </span>
</div>
`;
